<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/IconsGuideRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/IconsGuideLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="32dp" />

    <ImageView
        android:id="@+id/ivBackgroundHome"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background_introduction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBackHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="@+id/IconsGuideRight"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivMoreHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_more"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackHome"
        app:layout_constraintEnd_toStartOf="@+id/IconsGuideLeft"
        app:layout_constraintTop_toTopOf="@+id/ivBackHome" />

    <TextView
        android:id="@+id/tvTitleHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/strHome"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackHome"
        app:layout_constraintEnd_toStartOf="@+id/ivMoreHome"
        app:layout_constraintStart_toEndOf="@+id/ivBackHome"
        app:layout_constraintTop_toTopOf="@+id/ivBackHome" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProfileHome"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:background="@drawable/gradient_background"
        android:elevation="15dp"
        android:padding="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackgroundHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBackgroundHome"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:srcCompat="@drawable/icon_profile" />

    <TextView
        android:id="@+id/tvWelcomeHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins"
        android:text="Welcome, Eren!"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ivProfileHome"
        app:layout_constraintEnd_toEndOf="@+id/ivProfileHome"
        app:layout_constraintStart_toStartOf="@+id/ivProfileHome" />

    <TextView
        android:id="@+id/tvDateTimeHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="23 October 2023, Sunday"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/ivProfileHome"
        app:layout_constraintStart_toStartOf="@+id/ivProfileHome"
        app:layout_constraintTop_toBottomOf="@+id/ivProfileHome" />

    <TextView
        android:id="@+id/tvToDoWorkHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/strTodoWorks"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/IconsGuideRight"
        app:layout_constraintTop_toBottomOf="@+id/tvDateTimeHome" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/IconsGuideLeft"
        app:layout_constraintStart_toStartOf="@+id/IconsGuideRight"
        app:layout_constraintTop_toBottomOf="@+id/tvToDoWorkHome" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/strSchedule"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/IconsGuideRight"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/IconsGuideLeft"
        app:layout_constraintStart_toStartOf="@+id/IconsGuideRight"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>