<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/introduction_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/IconsGuideRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/IconsGuideLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp" />

        <ImageView
            android:id="@+id/ivAppLogoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:src="@drawable/app_logo"
            app:layout_constraintBottom_toBottomOf="@+id/tvAppNameLogin"
            app:layout_constraintEnd_toStartOf="@+id/tvAppNameLogin"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvAppNameLogin"
            app:shapeAppearanceOverlay="@style/circleImageView"
            app:srcCompat="@drawable/app_logo" />

        <TextView
            android:id="@+id/tvAppNameLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_light"
            android:text="UniUniverse"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tvLoginLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivAppLogoLogin" />

        <TextView
            android:id="@+id/tvLoginLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/strLetsLogin"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/cvInputsLogin"
            app:layout_constraintEnd_toStartOf="@+id/IconsGuideLeft"
            app:layout_constraintStart_toStartOf="@+id/IconsGuideRight"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLoginToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:fontFamily="@font/poppins_extralight"
            android:text="@string/strDontHaveAcc"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tvLoginLogin"
            app:layout_constraintStart_toStartOf="@+id/tvLoginLogin"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginLogin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/cardGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="230dp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvInputsLogin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="-10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardGuide">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tvSelectProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/strSelectProfile"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/rvProfilesLogin"
                    app:layout_constraintEnd_toEndOf="@+id/rvProfilesLogin"
                    app:layout_constraintStart_toStartOf="@+id/rvProfilesLogin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvProfilesLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSelectProfile"
                    app:layout_constraintVertical_chainStyle="packed" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>